--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "prefix" : "pls ",
-    "token" : "NTkwODczMDY3NTM5MDA1NDQx.XRR4XQ.T_YPHv0S5Z7XmctfxUqOtBBz1RQ",
+    "token" : "token here lel",
     "adminIDs" : ["143625285592547328"]
 }
