--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "prefix" : "?pls ",
-    "token" : "NTkwODczMDY3NTM5MDA1NDQx.XRslzg.dI3ws9PCzZVotgZEYml9KXdKMxU",
+    "token" : "",
     "adminIDs" : ["143625285592547328"]
 }
